--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "a restaurant database microservice",
   "main": "index.js",
   "author": "theory f practice <jackson.brebnor@gmail.com>",
-  "license": "MIT",
-  "private": null,
   "license": "ISC",
+  "private": null,
   "devDependencies": {
     "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.2",
@@ -16,7 +15,6 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
-    "clean-webpack-plugin": "^0.1.16",
     "eslint": "^4.7.2",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-config-prettier": "^2.6.0",
@@ -28,15 +26,19 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.4.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.30.1",
     "jest": "^21.1.0",
     "prettier": "^1.7.0",
     "prettier-eslint": "^8.1.1",
-    "prettier-eslint-cli": "^4.3.2",
-    "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.1.0"
+    "prettier-eslint-cli": "^4.3.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "mongoose": "^5.0.3",
+    "morgan": "^1.9.0",
+    "pm2": "^2.9.3",
+    "spdy": "^3.4.7"
   }
 }
