ests up contatinerization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,10 @@
 version: "3"
+services:
+  web:
+    build: .
+    volumes:
+     - .:/app
+  db:
+    image: 'mongo'
+    ports:
+      - "27017:27017"
