--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "theory f practice <jackson.brebnor@gmail.com>",
   "license": "ISC",
   "private": null,
+  "scripts": {
+    "start": "node .",
+    "test": "jest"
+  },
   "devDependencies": {
     "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.2",
@@ -16,22 +20,26 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "eslint": "^4.7.2",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-prettier": "^2.6.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-react-app": "^2.0.0",
-    "eslint-import-resolver-babel-module": "^3.0.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import-order-autofix": "^0.8.3",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.2.2",
+    "jasmine-expect": "^3.8.3",
     "jest": "^21.1.0",
     "prettier": "^1.7.0",
     "prettier-eslint": "^8.1.1",
     "prettier-eslint-cli": "^4.3.2"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
