--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3"
 services:
   web:
+    environment:
+      - DB_URL=mongodb://maitredb_db_1
     build: .
     volumes:
      - .:/app
