--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-sort-imports-es6-autofix": "^0.2.2",
+    "faker": "^4.1.0",
     "jasmine-expect": "^3.8.3",
     "jest": "^21.1.0",
     "prettier": "^1.7.0",
