seeds tables collection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,7 @@ services:
      - /data/db
   db:
     image: 'mongo'
+    volumes:
+     - /data/db
     ports:
-      - "27017:27017"
+      - 27017:27017
