--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "private": null,
   "scripts": {
-    "start": "node .",
+    "start": "nodemon .",
     "test": "jest"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "faker": "^4.1.0",
     "jasmine-expect": "^3.8.3",
     "jest": "^21.1.0",
+    "nodemon": "^1.14.12",
     "prettier": "^1.7.0",
     "prettier-eslint": "^8.1.1",
     "prettier-eslint-cli": "^4.3.2"
